# project-stdio

./: .gitignore  1  AGENTS.md  DEFERRED.md  README.md  app.py  docker-compose.yml  hermes_studio_bridge.py  installer.sh  pyproject.toml  settings.json  settings.json.example  uninstall.sh
deploy/helm/studio-workers/: Chart.yaml  values.yaml
deploy/helm/studio-workers/templates/: cluster-rbac.yaml  limitrange.yaml  namespace.yaml  networkpolicy.yaml  rbac.yaml  serviceaccount.yaml
design/proposals/: bundle-lifecycle-completion.md  bundle-lifecycle.md
docker/: Dockerfile.orchestrator  Dockerfile.proxy  Dockerfile.worker  init.sh
docs/: hermes-orchestrator-architecture.md  install.md  security.md
memory/: settings.json
memory/calibration/: scoring-outcomes.jsonl
metric-massager/: Dockerfile  app.py  requirements.txt
situation-room/: Dockerfile  app.py
specs/: agent-orchestration-v1.1.md  phase-1-kernel-implementation.md  phase-2-self-hosting.md  phase-4-remote-workers.md  phase-5-mid-flight-quality.md  phase-6-self-healing.md  phase-7-firecracker.md
studio/fc-agent/: Makefile  go.mod  main.go
studio/fc-agent/cmd/exec-guard/: main.go
studio/firecracker/: seccomp.json
studio/mcp/: resources.py  server.py  tools.py
studio/orchestrator/: approval.py  artifact.py  artifacts.py  capability.py  cli.py  db.py  display.py  escalation.py  executor.py  expression.py  firecracker.py  github.py  main.py  models.py  notify.py  ops.py  proxy.py  reconciler.py  reducers.py  review.py  rpc.py  runner.py  scheduler.py  settings.py  state_machine.py  tls.py  todoist.py  visualizer.py
studio/systemd/: studio-mcp.service  studio-orchestrator.service
studio/tests/: acceptance.sh  test_approval.py  test_artifact.py  test_bundler.py  test_capability.py  test_cli.py  test_db.py  test_db_migrations.py  test_developer.py  test_display.py  test_docker_runner.py  test_executor.py  test_expression.py  test_firecracker.py  test_fixtures.py  test_github.py  test_k8s_runner.py  test_main.py  test_mcp.py  test_models.py  test_new_repo_worktree.py  test_ops.py  test_proxy.py  test_qa.py  test_reconciler.py  test_reducers.py  test_remote_ssh_runner.py  test_review.py  test_rpc.py  test_runner.py  test_runner_selector.py  test_scheduler.py  test_security.py  test_settings.py  test_state_machine.py  test_tls.py  test_visualizer.py  test_worker.py
studio/tests/fixtures/: failing-worker.json  hello-world.json  invalid-manifest.json  linear-three-node.json  non-linear-dag-rejected.json
studio/workers/: bundler.py  client.py  developer.py  qa.py  review.py  verification.py  worker.py
studio_isolation/: __init__.py  approval.py  artifact.py  capability.py  langgraph_adapter.py  meta_orchestrator.py  rpc.py  runner.py
studio_isolation/tests/: test_boundary_integration.py  test_extraction.py  test_fire_boundary.py  test_isolation_library.py  test_langgraph_adapter.py  test_meta_orchestrator.py
war-room-dashboard/: package.json
war-room-dashboard/public/: index.html
war-room-dashboard/src/: App.js
