[project]
name = "studio"
version = "0.1.0"
description = "Agent Orchestration System - Phase 1 Kernel"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "aiosqlite>=0.20.0",
    "python-ulid>=2.0.0",
    "blake3>=0.4.0",
    "pyyaml>=6.0",
    "mcp>=1.27.1",
    "httpx>=0.28.1",
    "pyjwt>=2.12.1",
    "cryptography>=48.0.0",
    "starlette>=1.0.0",
    "uvicorn>=0.46.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0",
]

[project.scripts]
studio = "studio.orchestrator.cli:main"
studio-orchestrator = "studio.orchestrator.main:main"
studio-worker = "studio.workers.developer:main"
studio-bundler = "studio.workers.bundler:main"
studio-review = "studio.workers.review:main"
studio-mcp = "studio.mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["studio"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["studio/tests"]
